--- a/nb-shared/pom.xml
+++ b/nb-shared/pom.xml
@@ -3,12 +3,12 @@
     <parent>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>nbm-maven</artifactId>
-        <version>1.2</version>
+        <version>1.2-bitstrings-1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>nb-shared</artifactId>
-    <version>1.2</version>
+    <version>1.2-bitstrings-1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>NBM Plugins Utilities</name>
