--- a/nbm-maven-plugin/pom.xml
+++ b/nbm-maven-plugin/pom.xml
@@ -3,12 +3,12 @@
     <parent>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>nbm-maven</artifactId>
-        <version>1.2</version>
+        <version>1.2-bitstrings-1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>nbm-maven-plugin</artifactId>
-    <version>3.11</version>
+    <version>3.11-bitstrings-1-SNAPSHOT</version>
     <packaging>maven-plugin</packaging>
 
     <name>NBM Maven Plugin</name>
@@ -530,7 +530,7 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>nb-shared</artifactId>
-            <version>1.2</version>
+            <version>1.2-bitstrings-1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
