--- a/nbm-maven-plugin/pom.xml
+++ b/nbm-maven-plugin/pom.xml
@@ -79,7 +79,7 @@
             </roles>
         </contributor>
     </contributors>
-    
+
 
    <!-- TODO need to override parent version value... I suppose this will eventually end up in mojo parent pom, check regularly -->
     <mailingLists>
@@ -210,7 +210,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-site-plugin</artifactId>
                 <version>3.1</version>
-                <configuration> 
+                <configuration>
                     <reportPlugins>
                         <plugin>
                             <groupId>org.apache.maven.plugins</groupId>
@@ -227,7 +227,7 @@
                                 <report>summary</report>
                                 <!-- <report>cim</report> -->
                                 <report>mailing-list</report>
-                
+
                                 <report>license</report>
                             </reports>
                         </plugin>
@@ -247,7 +247,7 @@
                                 <onlyCurrentVersion>true</onlyCurrentVersion>
 
                             </configuration>
-       
+
                         </plugin>
                         <plugin>
                             <groupId>org.apache.maven.plugins</groupId>
@@ -261,7 +261,7 @@
                                 <headerLocation>config/maven-header.txt</headerLocation>
                             </configuration>
                         </plugin>
-                        
+
                         <plugin>
                             <groupId>org.apache.maven.plugins</groupId>
                             <artifactId>maven-javadoc-plugin</artifactId>
@@ -309,7 +309,7 @@
                                 </reportSet>
                             </reportSets>
                         </plugin>
-                        
+
                         <plugin>
                             <groupId>org.apache.maven.plugins</groupId>
                             <artifactId>maven-jxr-plugin</artifactId>
@@ -348,10 +348,10 @@
                                     <excludedLink>plugin-info.html</excludedLink>
                                 </excludedLinks>
                                 <!--<excludedPages>
-                                    <excludedPage>dependencies.html</excludedPage> 
+                                    <excludedPage>dependencies.html</excludedPage>
                                 </excludedPages>-->
-                            </configuration>	       
-                        </plugin>                        
+                            </configuration>
+                        </plugin>
                         <plugin>
                             <groupId>org.codehaus.mojo</groupId>
                             <artifactId>cobertura-maven-plugin</artifactId>
@@ -361,18 +361,18 @@
                                     <excludes>
                                         <exclude>**/HelpMojo.class</exclude>
                                     </excludes>
-                                </instrumentation>    
+                                </instrumentation>
                             </configuration>
                         </plugin>
-                        
-                       
+
+
                         <plugin>
-                            
+
                             <groupId>org.codehaus.mojo</groupId>
                             <artifactId>taglist-maven-plugin</artifactId>
                             <version>2.4</version>
                         </plugin>
-                        
+
                     </reportPlugins>
                 </configuration>
             </plugin>
@@ -424,6 +424,13 @@
     </profiles>
 
     <dependencies>
+        <!-- [ MUST BE FIRST TO MASK SOME CLASSES :: I am aware of the uglyness -->
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>nb-shared</artifactId>
+            <version>1.2-bitstrings-1-SNAPSHOT</version>
+        </dependency>
+        <!-- ] -->
         <dependency>
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-artifact</artifactId>
@@ -438,7 +445,7 @@
             <artifactId>maven-plugin-annotations</artifactId>
             <version>3.0</version>
             <scope>compile</scope>
-        </dependency>        
+        </dependency>
         <dependency>
             <groupId>org.apache.ant</groupId>
             <artifactId>ant</artifactId>
@@ -526,11 +533,6 @@
             <groupId>org.codehaus.plexus</groupId>
             <artifactId>plexus-io</artifactId>
             <version>2.0.2</version>
-        </dependency>
-        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>nb-shared</artifactId>
-            <version>1.2-bitstrings-1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
