--- a/pom.xml
+++ b/pom.xml
@@ -1,22 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
     <parent>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>mojo-parent</artifactId>
         <version>30</version>
     </parent>
+
     <modelVersion>4.0.0</modelVersion>
+
+    <groupId>org.bitstrings.maven.plugins</groupId>
     <artifactId>nbm-maven</artifactId>
     <version>1.2-bitstrings-1-SNAPSHOT</version>
+
     <packaging>pom</packaging>
+
     <name>NBM Maven Parent</name>
-    <scm>
-        <connection>scm:svn:http://svn.codehaus.org/mojo/trunk/mojo/nbm-maven</connection>
-        <developerConnection>scm:svn:https://svn.codehaus.org/mojo/trunk/mojo/nbm-maven</developerConnection>
-        <url>http://fisheye.codehaus.org/browse/mojo/trunk/mojo/nbm-maven</url>
-    </scm>
+
     <modules>
         <module>nbm-maven-plugin</module>
         <module>nb-shared</module>
     </modules>
+
+    <description>bitstrings.org - Fork of http://svn.codehaus.org/mojo/trunk/mojo/nbm-maven.</description>
+    <developers>
+        <developer>
+            <id>p</id>
+            <name>Pino Silvaggio</name>
+            <organization>bitstrings.org</organization>
+            <timezone>-5</timezone>
+        </developer>
+    </developers>
+
 </project>
