--- a/nb-shared/pom.xml
+++ b/nb-shared/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>org.codehaus.mojo</groupId>
+        <groupId>org.bitstrings.maven.plugins</groupId>
         <artifactId>nbm-maven</artifactId>
         <version>1.2-bitstrings-1-SNAPSHOT</version>
     </parent>
@@ -79,7 +79,7 @@
             </roles>
         </contributor>
     </contributors>
-    
+
 
    <!-- TODO need to override parent version value... I suppose this will eventually end up in mojo parent pom, check regularly -->
     <mailingLists>
@@ -178,7 +178,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-site-plugin</artifactId>
                 <version>3.1</version>
-                <configuration> 
+                <configuration>
                     <reportPlugins>
                         <plugin>
                             <groupId>org.apache.maven.plugins</groupId>
@@ -195,7 +195,7 @@
                                 <report>summary</report>
                                 <!-- <report>cim</report> -->
                                 <report>mailing-list</report>
-                
+
                                 <report>license</report>
                             </reports>
                         </plugin>
@@ -215,7 +215,7 @@
                                 <onlyCurrentVersion>true</onlyCurrentVersion>
 
                             </configuration>
-       
+
                         </plugin>
                         <plugin>
                             <groupId>org.apache.maven.plugins</groupId>
@@ -229,7 +229,7 @@
                                 <headerLocation>config/maven-header.txt</headerLocation>
                             </configuration>
                         </plugin>
-                        
+
                         <plugin>
                             <groupId>org.apache.maven.plugins</groupId>
                             <artifactId>maven-javadoc-plugin</artifactId>
@@ -277,7 +277,7 @@
                                 </reportSet>
                             </reportSets>
                         </plugin>
-                        
+
                         <plugin>
                             <groupId>org.apache.maven.plugins</groupId>
                             <artifactId>maven-jxr-plugin</artifactId>
@@ -316,10 +316,10 @@
                                     <excludedLink>plugin-info.html</excludedLink>
                                 </excludedLinks>
                                 <!--<excludedPages>
-                                    <excludedPage>dependencies.html</excludedPage> 
+                                    <excludedPage>dependencies.html</excludedPage>
                                 </excludedPages>-->
-                            </configuration>	       
-                        </plugin>                        
+                            </configuration>
+                        </plugin>
                         <plugin>
                             <groupId>org.codehaus.mojo</groupId>
                             <artifactId>cobertura-maven-plugin</artifactId>
@@ -329,18 +329,18 @@
                                     <excludes>
                                         <exclude>**/HelpMojo.class</exclude>
                                     </excludes>
-                                </instrumentation>    
+                                </instrumentation>
                             </configuration>
                         </plugin>
-                        
-                       
+
+
                         <plugin>
-                            
+
                             <groupId>org.codehaus.mojo</groupId>
                             <artifactId>taglist-maven-plugin</artifactId>
                             <version>2.4</version>
                         </plugin>
-                        
+
                     </reportPlugins>
                 </configuration>
             </plugin>
@@ -397,11 +397,11 @@
             <type>jar</type>
         </dependency>
         <dependency>
-            <groupId>${project.groupId}</groupId>
+            <groupId>org.codehaus.mojo</groupId>
             <artifactId>nbm-maven-harness</artifactId>
             <version>7.2</version>
         </dependency>
-        
+
     </dependencies>
     <properties>
         <mojo.java.target>1.6</mojo.java.target>
