--- a/nbm-maven-plugin/pom.xml
+++ b/nbm-maven-plugin/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>org.codehaus.mojo</groupId>
+        <groupId>org.bitstrings.maven.plugins</groupId>
         <artifactId>nbm-maven</artifactId>
         <version>1.2-bitstrings-1-SNAPSHOT</version>
     </parent>
@@ -525,7 +525,7 @@
             <scope>runtime</scope>
         </dependency>
         <dependency>
-            <groupId>${project.groupId}</groupId>
+            <groupId>org.codehaus.mojo</groupId>
             <artifactId>nbm-maven-harness</artifactId>
             <version>7.3</version>
         </dependency>
