--- a/nbm-maven-plugin/pom.xml
+++ b/nbm-maven-plugin/pom.xml
@@ -3,12 +3,12 @@
     <parent>
         <groupId>org.bitstrings.maven.plugins</groupId>
         <artifactId>nbm-maven</artifactId>
-        <version>1.2-bitstrings-1-SNAPSHOT</version>
+        <version>1.2-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>nbm-maven-plugin</artifactId>
-    <version>3.11-bitstrings-1-SNAPSHOT</version>
+    <version>3.11-SNAPSHOT</version>
     <packaging>maven-plugin</packaging>
 
     <name>NBM Maven Plugin</name>
@@ -428,7 +428,7 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>nb-shared</artifactId>
-            <version>1.2-bitstrings-1-SNAPSHOT</version>
+            <version>1.2-SNAPSHOT</version>
         </dependency>
         <!-- ] -->
         <dependency>
