--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 
     <groupId>org.bitstrings.maven.plugins</groupId>
     <artifactId>nbm-maven</artifactId>
-    <version>1.2-SNAPSHOT</version>
+    <version>1.2-beta-1</version>
 
     <packaging>pom</packaging>
 
