plexus component should use org.bitstrings.maven.plugin mojo

--- a/nbm-maven-plugin/pom.xml
+++ b/nbm-maven-plugin/pom.xml
@@ -401,11 +401,13 @@
     </profiles>
 
     <dependencies>
+        <!-- [ bitstrings only nbm tools -->
         <dependency>
             <groupId>org.bitstrings.maven</groupId>
             <artifactId>nbm-tools</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <!-- ] -->
         <dependency>
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-artifact</artifactId>
