fix npe when manifest is ignored bump guava to 15.0 and globalize

--- a/nbm-maven-plugin/pom.xml
+++ b/nbm-maven-plugin/pom.xml
@@ -525,8 +525,7 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>12.0</version>
-            <type>jar</type>
+            <version>${guava.version}</version>
         </dependency>
     </dependencies>
     <properties>
