--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 
     <groupId>org.bitstrings.maven</groupId>
     <artifactId>nbm-maven</artifactId>
-    <version>3.11.1.-1</version>
+    <version>3.11.1-1</version>
 
     <packaging>pom</packaging>
 
