--- a/nbm-maven-plugin/pom.xml
+++ b/nbm-maven-plugin/pom.xml
@@ -3,11 +3,11 @@
     <parent>
         <groupId>org.bitstrings.maven</groupId>
         <artifactId>nbm-maven</artifactId>
-        <version>3.13.2-SNAPSHOT</version>
+        <version>3.13.2-bitstrings-1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.bitstrings.maven.plugins</groupId>
+    <groupId>org.codehaus.mojo</groupId>
     <artifactId>nbm-maven-plugin</artifactId>
 
     <packaging>maven-plugin</packaging>
