--- a/nbm-tools/pom.xml
+++ b/nbm-tools/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <groupId>org.bitstrings.maven</groupId>
         <artifactId>nbm-maven</artifactId>
-        <version>3.13.2</version>
+        <version>3.13.2-1-SNAPSHOT</version>
     </parent>
 
     <artifactId>nbm-tools</artifactId>
