--- a/nbm-tools/pom.xml
+++ b/nbm-tools/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <groupId>org.bitstrings.maven</groupId>
         <artifactId>nbm-maven</artifactId>
-        <version>3.13.2-1-SNAPSHOT</version>
+        <version>3.13.3-SNAPSHOT</version>
     </parent>
 
     <artifactId>nbm-tools</artifactId>
@@ -41,7 +41,7 @@
         <dependency>
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>nbm-maven-harness</artifactId>
-            <version>7.4</version>
+            <version>${nbm-maven-harness.version}</version>
         </dependency>
 
     </dependencies>
