--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 
     <groupId>org.bitstrings.maven</groupId>
     <artifactId>nbm-maven</artifactId>
-    <version>3.13.2-1-SNAPSHOT</version>
+    <version>3.13.3-SNAPSHOT</version>
 
     <packaging>pom</packaging>
 
@@ -57,6 +57,8 @@
 
     <properties>
         <guava.version>15.0</guava.version>
+
+        <nbm-maven-harness.version>8.0-beta</nbm-maven-harness.version>
     </properties>
 
     <build>
