--- a/nbm-tools/pom.xml
+++ b/nbm-tools/pom.xml
@@ -39,9 +39,15 @@
         </dependency>
 
         <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.10</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>nbm-maven-harness</artifactId>
-            <version>7.4</version>
+            <version>${nbm-maven-harness.version}</version>
         </dependency>
 
     </dependencies>
