--- a/nbm-maven-plugin/pom.xml
+++ b/nbm-maven-plugin/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>org.bitstrings.maven</groupId>
         <artifactId>nbm-maven</artifactId>
-        <version>3.14-bitstrings-1-SNAPSHOT</version>
+        <version>codehaus-3.14-bitstrings-2-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
