--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 
     <groupId>org.bitstrings.maven</groupId>
     <artifactId>nbm-maven</artifactId>
-    <version>codehaus-3.14-bitstrings-2-SNAPSHOT</version>
+    <version>3.14-bitstrings-2-SNAPSHOT</version>
 
     <packaging>pom</packaging>
 
